EE3 experimental result , final

--- a/experiment/simulation/toolkit/toolkit.css
+++ b/experiment/simulation/toolkit/toolkit.css
@@ -22,6 +22,9 @@
         display: none!important;
         visibility: hidden;
     }
+    .anime-header, .anime-footer{
+        display: flex!important;
+    }
     .main-window{
         border-radius: 10px;
     }
